# qiita_project_docker

./: Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
tests/: test_qiita_project.py
