[tool.poetry]
name = "qiita_project"
version = "0.1.0"
description = ""
authors = ["sakurairihito <sakurairihito@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
